# hooks

./: .codespellrc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  markdown.sh  namespell.sh  pyproject.toml
hooks/: check_upstream_status.py  namespell.py  sort-mkdocs.py
hooks/test/: errors.md  no_errors.md
namespell/: pyproject.toml
namespell/src/namespell/: __main__.py  namespell_check.py
pre-commit-init/: pre-commit-init.py  pre_commit_config.j2
src/hooks/: check_upstream_status.py  replace_hyphen_like.py  sort_mkdocs.py
src/hooks/test/: no_errors.md
