[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "3mdeb-hooks"
authors = [{name = "3mdeb"}]
description = "3mdeb pre-commit hooks"
license = { text = "MIT" }
version = "0.1.9"

[project.scripts]
namespell = "hooks.namespell:main"
sort-mkdocs = "hooks.sort_mkdocs:main"
check-upstream-status = "hooks.check_upstream_status:main"
replace-hyphen-like = "hooks.replace_hyphen_like:main"
