[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "3mdeb-hooks"
packages = [{include = "hooks", from = "src"}]
authors = ["3mdeb"]
description = "3mdeb pre-commit hooks"
license = "MIT"
version = "0.2.2"

[tool.poetry.scripts]
namespell = "hooks.namespell:main"
sort-mkdocs = "hooks.sort_mkdocs:main"
check-upstream-status = "hooks.check_upstream_status:main"
replace-hyphen-like = "hooks.replace_hyphen_like:main"
